--- a/core/templates/partials/header.html
+++ b/core/templates/partials/header.html
@@ -15,7 +15,7 @@
                         Ressources
                     </button>
                     <div class="absolute hidden group-hover:block bg-white shadow-lg rounded mt-2 w-48 z-50">
-                        <a href="{% url 'core:ressources' %}" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Documentation</a>
+                        <a href="{% url 'core:list' %}" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Documentation</a>
                         <a href="{% url 'quiz:quiz' %}" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Quiz
                             santé</a>
                         <a href="{% url 'quiz:autoevaluation' %}"
