--- a/core/templates/vitrine/accueil.html
+++ b/core/templates/vitrine/accueil.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -116,7 +119,7 @@
     {% include 'partials/header.html' %}
 
     <!-- Hero Section -->
-    <section class="hero-section pt-28 pb-16 md:py-32" style="background-image: url('https://readdy.ai/api/search-image?query=A%20modern%20medical%20illustration%20showing%20a%20doctor%20or%20healthcare%20professional%20interacting%20with%20a%20digital%20health%20interface%2C%20with%20soft%20blue%20gradient%20on%20the%20left%20side%20fading%20into%20a%20clean%20medical%20themed%20illustration%20on%20the%20right.%20The%20left%20side%20should%20have%20ample%20space%20for%20text%20with%20a%20light%20blue%20background%20that%20perfectly%20blends%20with%20the%20illustration.%20The%20overall%20style%20should%20be%20professional%2C%20reassuring%2C%20and%20modern%20with%20medical%20symbols%20subtly%20integrated.&width=1600&height=800&seq=hero123&orientation=landscape');">
+    <section class="hero-section pt-28 pb-16 md:py-32" style="background-image: url('{% static 'img/womencare.jpg' %}');">
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="hero-content w-full md:w-1/2 mb-10 md:mb-0">
