--- a/core/templates/partials/header.html
+++ b/core/templates/partials/header.html
@@ -4,7 +4,7 @@
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <a href="#" class="flex items-center">
 
-                <span class="text-primary font-['Pacifico'] text-2xl">Saytu Tension & Suukër</span>
+                <span class="text-primary font-['Pacifico'] text-2xl">SantéChat</span>
             </a>
             <nav class="hidden md:flex space-x-8">
                 <a href="{% url 'core:index' %}" class="font-poppins text-gray-800 hover:text-primary font-medium">Accueil</a>
